sql/item_func.cc
@@ -6750,7 +6750,7 @@ Item_func_sp::fix_fields(THD *thd, Item **ref)
   DBUG_ASSERT(m_sp == NULL);
   if (!(m_sp= sp))
   {
-    my_missing_function_error(m_name->m_name, ErrConvDQName(m_name).ptr());
+    my_missing_function_error(*m_name->get_case_preserved_name(), ErrConvDQName(m_name).ptr());
     process_error(thd);
     DBUG_RETURN(TRUE);
   }
